--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -48,6 +48,40 @@ a:not(.btn-jule, .btn-jule-2, .card, .nav-link, .download-link):hover {
   background-color: var(--jule-dark);
 }
 
+.btn-jule {
+  background-color: var(--jule);
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.3s;
+  color: white;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.btn-jule:hover {
+  background-color: var(--jule-dark);
+}
+
+.btn-jule-2 {
+  border: 2px solid var(--jule);
+  padding: 15px;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.btn-jule-2:hover {
+  background-color: var(--jule);
+  color: white;
+}
+
 summary {
   display:block;
 }
