--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -82,10 +82,6 @@ a:not(.btn-jule, .btn-jule-2, .card, .nav-link, .download-link):hover {
   color: white;
 }
 
-summary {
-  display:block;
-}
-
 .badge-success {
   color: white;
   font-size: 14px;
@@ -117,4 +113,12 @@ select {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
+}
+
+summary {
+  list-style: none;
+}
+
+summary::-webkit-details-marker {
+  display: none;
 }
