--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,42 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--jule) transparent;
-}
-
-*::-webkit-scrollbar {
-  width: 7px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: var(--jule);
-  border-radius: 10px;
-}
-
 :root {
-  --jule: #5f7389;
-  --jule-dark: #3d4752;
-}
+  --bg-primary: #2F333D;
+  --bg-secondary: #707788;
+  --bg-tertiary: #EBEBEB;
 
-::-moz-selection,
-::selection
-{
-  background-color: var(--jule);
-  color: white;
-}
-
-@font-face {
-  font-family: "Code";
-  src: url("./CascadiaCode.ttf") format("truetype");
-}
-
-#nprogress .bar {
-  background: var(--jule) !important;
-  height: 3px !important;
+  --color-primary: #5f7389;
+  --color-primary-darker: #404d5b;
+  --color-secondary: #CBBB67;
+  --color-secondary-darker: #a49443;
 }
