--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,18 @@
 @import './base.css';
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 * {
   scrollbar-width: thin;
   scrollbar-color: var(--color-primary) transparent;
+  font-family: "Poppins";
+}
+
+#code-block {
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 ::-webkit-scrollbar {
