--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,48 +3,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--color-primary) transparent;
-  font-family: "Poppins";
+
+/* Based on;
+* Dracula Theme v1.2.5
+*
+* https://github.com/dracula/highlightjs
+*
+* Copyright 2016-present, All rights reserved
+*
+* Code licensed under the MIT license
+*
+* @author Denis Ciccale <dciccale@gmail.com>
+* @author Zeno Rocha <hi@zenorocha.com>
+*/
+
+.hljs-built_in,
+.hljs-selector-tag,
+.hljs-section,
+.hljs-link {
+    color: #8be9fd;
 }
 
-#download-button {
-  background-color: var(--color-primary);
+.hljs-keyword,
+.hljs-type {
+    color: #ff79c6;
 }
 
-#code-block {
-  font-family: "Source Code Pro", monospace;
-  font-optical-sizing: auto;
-  font-style: normal;
+.hljs,
+.hljs-variable,
+.hljs-subst {
+    color: #f8f8f2;
 }
 
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+.hljs-title,
+.hljs-attr,
+.hljs-meta-keyword {
+    color: #50fa7b;
 }
 
-::-webkit-scrollbar-corner {
-  background: transparent;
+.hljs-string,
+.hljs-meta,
+.hljs-name,
+.hljs-symbol,
+.hljs-bullet,
+.hljs-addition,
+.hljs-template-tag,
+.hljs-template-variable {
+    color: #f1fa8c;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--color-primary);
-  border-radius: 10px;
+.hljs-comment,
+.hljs-quote,
+.hljs-deletion {
+    color: #6272a4;
 }
 
-::-moz-selection,
-::selection
-{
-  background-color: var(--color-primary);
-  color: white;
-}
-
-#nprogress .bar {
-  background: var(--color-primary) !important;
-  height: 3px !important;
-}
-
-main {
-  min-height: calc(100vh - 80px - 80px); /* screen height - navbar- footer */
+.hljs-literal,
+.hljs-number {
+    color: #bd93f9;
 }
