--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,66 +1,7 @@
 @import './base.css';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
-
-/* Based on;
-* Dracula Theme v1.2.5
-*
-* https://github.com/dracula/highlightjs
-*
-* Copyright 2016-present, All rights reserved
-*
-* Code licensed under the MIT license
-*
-* @author Denis Ciccale <dciccale@gmail.com>
-* @author Zeno Rocha <hi@zenorocha.com>
-*/
-
-.hljs-built_in,
-.hljs-selector-tag,
-.hljs-section,
-.hljs-link {
-    color: #8be9fd;
-}
-
-.hljs-keyword,
-.hljs-type {
-    color: #ff79c6;
-}
-
-.hljs,
-.hljs-variable,
-.hljs-subst {
-    color: #f8f8f2;
-}
-
-.hljs-title,
-.hljs-attr,
-.hljs-meta-keyword {
-    color: #50fa7b;
-}
-
-.hljs-string,
-.hljs-meta,
-.hljs-name,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-addition,
-.hljs-template-tag,
-.hljs-template-variable {
-    color: #f1fa8c;
-}
-
-.hljs-comment,
-.hljs-quote,
-.hljs-deletion {
-    color: #6272a4;
-}
-
-.hljs-literal,
-.hljs-number {
-    color: #bd93f9;
-}
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 .code-region {
     border-radius: 10px;
@@ -68,6 +9,10 @@
     background-color: rgb(40, 40, 40);
     color: white;
     width: fit-content;
+}
+
+.code {
+    font-family: "Jetbrains Mono";
 }
 
 main,
